# lactf-archive

./: .gitmodules  LICENSE  README.md
2023/: README.md
2023/admin-bot/: Dockerfile  index.js  package-lock.json  package.json
2023/admin-bot/handlers/: california-state-police.js  hptla.js  metaverse.js
2023/crypto/chinese-lazy-theorem-1/: Dockerfile  challenge.yaml  flag.txt  solve.py
2023/crypto/chinese-lazy-theorem-2/: Dockerfile  challenge.yaml  flag.txt  solve.py
2023/crypto/greek-cipher/: challenge.yaml
2023/crypto/guess-the-bit/: Dockerfile  challenge.yaml  flag.txt  solve.py
2023/crypto/hill-easy/: Dockerfile  challenge.yaml  flag.txt  solve.sage
2023/crypto/hill-hard/: README.md  challenge.yaml  flag.txt  solve.sage
2023/crypto/one-more-time-pad/: challenge.yaml
2023/crypto/ravin-cryptosystem/: challenge.yaml  flag.txt  solve.py
2023/crypto/rolling-in-the-mud/: challenge.yaml
2023/misc/cats/: challenge.yaml
2023/misc/discord/: challenge.yaml
2023/misc/discord-leak/: challenge.yaml  solve.html
2023/misc/ebe/: EBE.pcap  challenge.yaml
2023/misc/feedback/: challenge.yaml
2023/misc/hackers-notes/: Solution.txt  challenge.yaml
2023/misc/hidden-in-plain-sheets/: challenge.yaml  solutions.md
2023/misc/hike-to-where/: Solution.md  challenge.yaml
2023/misc/new-challenge/: Dockerfile  challenge.yaml  pre-receive  sshd_config  start.sh
2023/misc/private-bin/: challenge.yaml  docker-compose.yml  sus-script.html
2023/misc/pycjail/: Dockerfile  challenge.yaml  flag.txt  gen.py  main.py  solve.txt
2023/pwn/bot/: Makefile  challenge.yaml  flag.txt  solve.py
2023/pwn/breakup/: challenge.yaml
2023/pwn/eth-challenge-base/: 98-start-gunicorn  Dockerfile  foundry.toml
2023/pwn/evmvm/: challenge.yaml
2023/pwn/gatekeep/: Makefile  challenge.yaml  flag.txt  solve.txt
2023/pwn/redact/: Makefile  challenge.yaml  flag.txt  solve.py
2023/pwn/rickroll/: Makefile  challenge.yaml  flag.txt  solve.py
2023/pwn/rut-roh-relro/: Makefile  challenge.yaml  flag.txt  solve.py
2023/pwn/sailor/: challenge.yaml  flag.txt  gen_dist.sh  solve.py
2023/pwn/sailor/solve/: Cargo.toml
2023/pwn/sailor/solve/src/: lib.rs
2023/pwn/stuff/: challenge.yaml  flag.txt  solve.py  stuff.c  write-up.md
2023/rev/caterpillar/: challenge.yaml
2023/rev/ctfd-plus/: Makefile  challenge.yaml  ctfd_plus.c  gen.py
2023/rev/finals-simulator/: Dockerfile  Makefile  challenge.yaml  finals_simulator.c  flag.txt  gen.py  solve.txt
2023/rev/pbr/: .gitignore  Cargo.toml  build.rs  challenge.yaml  gen.py  rust-toolchain.toml
2023/rev/pbr/.cargo/: config.toml
2023/rev/pbr/shaders/: Cargo.toml
2023/rev/pbr/shaders/src/: brdf.rs  lib.rs  sea.rs  util.rs  vm.rs
2023/rev/pbr/solve/: Cargo.toml
2023/rev/pbr/solve/src/: main.rs
2023/rev/pbr/src/: aes.rs  main.rs
2023/rev/snek/: Dockerfile  challenge.yaml  flag.txt  gen.py  obfuscate.py  snekimpl.py  solve.py
2023/rev/string-cheese/: Dockerfile  Makefile  challenge.yaml  flag.txt  solve.txt  string_cheese.c
2023/rev/switcheroo/: challenge.yaml  pseudocode.txt
2023/rev/universal/: FlagChecker.java  challenge.yaml  gen.py
2023/web/85-reasons-why/: .gitignore  challenge.yaml  populate_db.py  requirements.txt  solve.py
2023/web/california-state-police/: Dockerfile  challenge.yaml  index.html  solve.txt
2023/web/college-tour/: Dockerfile  challenge.yaml  solve.txt
2023/web/hptla/: Dockerfile  challenge.yaml  package-lock.json  package.json  solve.txt
2023/web/metaverse/: Dockerfile  challenge.yaml  package-lock.json  package.json  post.html
2024/: .gitignore  README.md
2024/admin-bot/: .gitignore  .puppeteerrc.cjs  Dockerfile  chall.env  index.js  package-lock.json  package.json  submit.html
2025/: .gitignore  README.md
2025/admin-bot/: Dockerfile
2025/misc/tokens-please/solve/: Cargo.toml
2025/misc/tokens-please/solve/src/: lib.rs  lib.template.rs
2025/rev/: 1000xREV
2026/: .gitignore  README.md
2026/admin-bot/: chall.env
2026/crypto/slow-gold/app/emp-zk/: CMakeLists.txt
2026/crypto/slow-gold/app/emp-zk/emp-zk/edabit/: edabits.h
2026/crypto/slow-gold/app/emp-zk/emp-zk/emp-vole/: base_svole.h  cope.h  mpfss_reg.h  preot.h  spfss_sender.h  utility.h
2026/crypto/slow-gold/app/emp-zk/emp-zk/emp-vole-f2k/: base_svole.h  lpn_f2k.h  spfss_f2k_recver.h  svole.h
2026/crypto/slow-gold/app/emp-zk/emp-zk/emp-zk-arith/: conversion.h  emp-zk-arith.cpp  emp-zk-arith.h  int_fp.h  zk_fp_exec_prover.h  zk_fp_exec_verifier.h
2026/crypto/slow-gold/app/emp-zk/emp-zk/emp-zk-bool/: emp-zk-bool.cpp  emp-zk-bool.h  ostriple.h  zk_bool_circuit_exec.h
2026/crypto/slow-gold/app/emp-zk/emp-zk/extensions/: floats.h  lowmc.h
2026/crypto/slow-gold/app/emp-zk/emp-zk/extensions/ram-zk/: emp-ram-zk.h  ostriple.h  ro-zk-mem.h
2026/crypto/slow-gold/app/emp-zk/test/: CMakeLists.txt
2026/crypto/slow-gold/app/emp-zk/test/arith/: abconversion.cpp  chall.cpp  circuit_scalability.cpp  inner_prdt.cpp  input_scalability.cpp  matrix_mul.cpp  polynomial.cpp
2026/crypto/slow-gold/solve/emp-zk/test/: CMakeLists.txt
2026/crypto/slow-gold/solve/emp-zk/test/arith/: chall.cpp  client.cpp  matrix_mul.cpp  zk_proof.cpp
lactf-challenges-2025/: .gitmodules
lactf-challenges-2025/admin-bot/: chall.env
lactf-challenges-2025/misc/tokens-please/chall/: Cargo.toml
lactf-challenges-2025/misc/tokens-please/chall/src/: lib.rs
lactf-challenges-2025/misc/tokens-please/server/: Cargo.toml
lactf-challenges-2025/misc/tokens-please/server/src/: main.rs
(+1547 files in other folders)
