[package]
name = "lactf2023-pbr"
authors = [
    "ACM Cyber at UCLA <uclacyber@gmail.com>",
    "Psi Beta Rho <psibetarho@gmail.com>",
    "Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>",
]
version = "4.20.69"
edition = "2021"

[workspace]
exclude = [ "shaders", "solve" ]

[dependencies]
bytemuck = { version = "1.13", features = ["derive", "extern_crate_std", "min_const_generics"] }
glam = { version = "0.22.0", features = ["bytemuck"] }
vulkano = { git = "https://github.com/Arc-blroth/vulkano/", rev = "c87d4607f24d0d4b40b87c648308cec157c0c206" }
vulkano-shaders = { git = "https://github.com/Arc-blroth/vulkano/", rev = "c87d4607f24d0d4b40b87c648308cec157c0c206" }
vulkano-win = { git = "https://github.com/Arc-blroth/vulkano/", rev = "c87d4607f24d0d4b40b87c648308cec157c0c206" }
vulkano-util = { git = "https://github.com/Arc-blroth/vulkano/", rev = "c87d4607f24d0d4b40b87c648308cec157c0c206" }
winit = "0.27.5"

[build-dependencies]
bytemuck = { version = "1.13", features = ["derive", "extern_crate_std", "min_const_generics"] }
glam = { version = "0.22.0", features = ["bytemuck"] }
spirv-builder = "0.5"
obj-rs = "0.7.0"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
