[package]
edition = "2021"
name = "solve"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
sailor = {path = "../chall", features = ["cpi"], version = "0.1.0"}
solana-program = "1.14.11"
anchor-lang = "0.26.0"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[lib]
crate-type = ["cdylib", "rlib"]
