[package]
name = "solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.26"
anchor-lang = "0.30.1"
tokens-please = { path = "../chall", features = ["cpi"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
